kubernetes/staging/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: one-b
  labels:
    app: one-b
    project: one-b
spec:
  selector:
    matchLabels:
      app: one-b
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: one-b
        project: one-b
    spec:
      serviceAccountName: one-b
      containers:
        - name: one-b
          image: reg.sighup.io/kage/one-b:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: one-b
  labels:
    app: one-b
    project: one-b
spec:
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: one-b
