kubernetes/staging/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: one-b-backend-internal
  # annotations:
  # kubernetes.io/ingress.class: internal
  # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: one-b
    project: one-b
spec:
  rules:
    - host: one-b.kage.demos.sighup.io
      http:
        paths:
          - path: "/"
            backend:
              serviceName: one-b
              servicePort: http
